<resources>
    <string name="app_name">微店-</string>
    <string name="sign_up">注册</string>
    <string name="log_in">登录</string>
    <string name="wechat_login">微信登录</string>

    <string name="img1_title">5000万卖家</string>
    <string name="img1_sum">5千万卖家的共同选择</string>
    <string name="img2_title">微信中点亮微店</string>
    <string name="img2_sum">点微信头像，逛我的微店</string>
    <string name="img3_title">免费开店</string>
    <string name="img3_sum">费用全免，58秒闪电开店</string>

    <string name="local_title">+86</string>
    <string name="local_sum">中国</string>
    <string name="phone_hint">填写手机号</string>
    <string name="password_hint">6–16位登录密码</string>
    <string name="phone_number">手机号</string>
    <string name="password">密码</string>
    <string name="forgot">忘记密码</string>

    <string name="choose_country">选择国家和地区</string>
    <string name="next_step">下一步</string>

    <string name="already_agree">已阅读并同意</string>
    <string name="service_xieyi">《微店平台服务协议》</string>
    <string name="manager_guifan">《微店禁售商品管理规范》</string>
    <string name="and">和</string>

    <string name="set_password">设置密码</string>
    <string name="set_password_hint">6-16位登录密码</string>
    <string name="reacquire">重新获取</string>
    <string name="verification_code">验证码</string>
    <string name="six_verification_code">六位验证码</string>
    <string name="cant_receive_code">收不到验证码？</string>

    <string name="setting">设置</string>
    <string name="account_manage">帐号管理</string>
    <string name="Business_file">生意档案</string>
    <string name="Moving_assistant">搬家助手</string>
    <string name="Delivery_assistant">送货助手</string>
    <string name="New_message_notification">新消息通知</string>
    <string name="Punish_complaint">处罚申诉</string>
    <string name="weishop_web_version">微店网页版</string>
    <string name="weishop_about">关于微店</string>
    <string name="weishop_rule">微店规则</string>
    <string name="help_and_feedback">帮助与反馈</string>
    <string name="check_update">检查升级</string>
    <string name="Evaluation">求评价</string>

    <string name="sign_out">退出登录</string>
    <string name="Raiders">开单攻略</string>

    <string name="note">笔记</string>
    <string name="commodity">商品</string>
    <string name="Order">订单</string>
    <string name="statistics">统计</string>
    <string name="client">客户</string>
    <string name="income">收入</string>
    <string name="Promotion">推广</string>
    <string name="service">服务</string>
    <string name="Supply_from">货源</string>
    <string name="Supply_to">供货</string>
    <string name="community">社区</string>
    <string name="chat_message">聊天消息</string>
    <string name="Punch">打卡</string>

    <string name="order_manage">订单管理</string>
    <string name="my_income">我的收入</string>
    <string name="supply_to_title">微店供应商报名开始啦！</string>
    <string name="weishop_community">微店社区</string>
    <string name="notification">通知</string>

    <string name="Manager_Punch">店长打卡</string>
    <string name="manager_note">店长笔记</string>
    <string name="weishop_headline">微店头条</string>

    <string name="Sale">出售中</string>
    <string name="Off_the_shelf">已下架</string>
    <string name="classification">分类</string>
    <string name="weishop_manager">微店管理</string>

    <string name="Shop_decoration">店铺装修</string>
    <string name="weichat_payment">微信收款</string>
    <string name="Shop_announcement">店铺公告</string>
    <string name="Shipping_settings">运费设置</string>

    <string name="nactivated">已开通</string>
    <string name="nonactivated">未开通</string>
    <string name="join_qq_shop_number">加入qq购物车号</string>
    <string name="Authentication">身份认证</string>
    <string name="Unauthenticated">未认证</string>
    <string name="Certification">资质认证</string>
    <string name="Save_stocking">减库存方式</string>
    <string name="Take_off_the_stock">拍下减库存</string>
    <string name="Automatic_confirmation_harvest_time">自动确认收获时间</string>
    <string name="Seven_days">7天</string>
    <string name="Secured_transactions">担保交易</string>
    <string name="Direct_arrival">直接到账</string>
    <string name="Cash_on_delivery">货到付款</string>
    <string name="Return_protection">退货保障</string>
    <string name="Margin_protection">保证金保障</string>


    <string name="Preview">预览</string>
    <string name="QR_code">二维码</string>
    <string name="copy_Link">复制链接</string>
    <string name="share">分享</string>

    <string name="yesterday_views">昨日浏览</string>
    <string name="total_views">总浏览量</string>
    <string name="Collection">收藏</string>
    <string name="awesome">赞</string>

    <string name="Visitors">访客</string>
    <string name="Money">金额</string>

    <string name="Get_more_orders">如何获得更多订单？</string>

    <string name="Can_be_raised">可提现</string>
    <string name="Completed_transactions">已完成交易</string>

    <string name="Transactions">交易中</string>
    <string name="Ongoing_transactions">进行中的交易</string>
    <string name="Has_been_raised">已提现</string>
    <string name="zero_point">0.00</string>
    <string name="Binding_card">绑定银行卡</string>
    <string name="Income_and_expenditure_details">收支明细</string>
    <string name="Unbounded">未绑定</string>

    <string name="order_search">商品名、订单号、手机号、姓名等</string>
    <string name="processing">进行中</string>
    <string name="completed">已完成</string>
    <string name="closed">已关闭</string>

    <string name="to_be_delivered">待发货</string>
    <string name="Pending_payment">待付款</string>
    <string name="Shipped">已发货</string>
    <string name="Refunding">退款中</string>

    <string name="Add_new_product">添加新商品</string>
    <string name="Good_Recommended_goods">好货推荐</string>

    <string name="more">更多  ></string>

    <string name="Quick_shop">快速开店</string>
    <string name="Sourcing">寻找货源</string>
    <string name="Taobao_move">淘宝搬家</string>

    <string name="Join_weishop">加盟微店</string>
    <string name="Moving_assistant_weishop">搬家助手 一 微店</string>

    <string name="Add_new_note">添加新笔记</string>

    <string name="note_info">阅读 0\t\t赞 0</string>
    <string name="copy">预览</string>
    <string name="new_note">新笔记</string>
    <string name="Please_fill_in_title">请填写标题</string>
    <string name="Please_fill_in_the_contents">请填写内容</string>
    <string name="release">发布</string>
    <string name="edit_note">编辑笔记</string>
    <string name="complete">完成</string>

    <string name="delete_note">删除笔记</string>
    <string name="weishop_info">微店信息</string>
    <string name="shop_logo">店铺logo</string>
    <string name="shop_name">店铺名称</string>
    <string name="Head_manager">店长头像</string>
    <string name="Manager_nickname">店长昵称</string>
    <string name="Manager_tag">店长标签</string>
    
    <string name="wechat_number">微信号</string>
    <string name="wechat_QR_code">微信二维码</string>
    <string name="Manager_card">店长名片</string>
    <string name="shop_level">微店等级</string>
    <string name="Main_category">主营类目</string>
    <string name="Entity_store_address">实体店地址</string>
    <string name="consumer_hotline">客服电话</string>
</resources>
