<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.qiang.weishop.SignUpActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ToolbarTheme">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/white" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/local_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="10dp"
                android:text="@string/local_title"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/local_sum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="#00000000"
                android:text="@string/local_sum" />

        </LinearLayout>

        <ImageView
            android:id="@+id/add86_divi"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#ECECEC" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/phone_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="10dp"
                android:text="@string/phone_number"
                android:textColor="#000000"
                android:textSize="16sp" />

            <com.example.qiang.weishop.EdittextWithDel
                android:id="@+id/phone_sum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@null"
                android:hint="@string/phone_hint"
                android:inputType="number" />

        </LinearLayout>

        <ImageView
            android:id="@+id/phone_divi"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#ECECEC" />

        <Button
            android:id="@+id/sign_up_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_light"
            android:text="@string/next_step"
            android:textColor="#F6D8DB"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_agree"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/service_xieyi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_xieyi"
                android:textColor="@color/blue"
                android:textSize="10sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/and"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/manager_guifan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manager_guifan"
                android:textColor="@color/blue"
                android:textSize="10sp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
