<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.qiang.weishop.MainNoteEditNoteActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ToolbarTheme">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/edit_note"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="edit_complete_click"
                android:text="@string/complete"
                android:textColor="@color/white" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_note_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Please_fill_in_title" />

        <EditText
            android:id="@+id/edit_note_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Please_fill_in_the_contents" />

    </LinearLayout>
    <LinearLayout
        android:onClick="edit_delete_note_click"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@drawable/del_icon_20"
        android:background="#00000000"
        android:text="@string/delete_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
